k8s/domains/plans/workloads/api/infra/overlays/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
